[package]
name = "web_service"
version = "0.1.0"
edition = "2021"
# cargo run -p web_service --bin teacher-service
# 不使用 --bin 指定要运行的bin时运行 teacher-service
default-run = "teacher-service"


[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
# openssl = { version = "0.10.38", features = ["vendored"] }
serde = { version = "1.0.134", features = ["derive"] }
sqlx = { version = "0.6.0", default_features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[[bin]]
name = "server1"


[[bin]]
name = "teacher-service"
